# cp317

./: .coverage  .coveragerc  .gitignore  README.md  env.yml  environment.yml  formatter_test.py  main.py  pyproject.toml  requirements.txt  test.py
src/: __init__.py  main.cpp
src/abstracts/: errors_abstract.py  file_handler_abstract.py  file_process_abstract.py  formatter_abstract.py  reader_abstract.py  writer_abstract.py
src/app/: errors.py  exceptions.py  file_handler.py  file_processor.py  formatter.py  reader.py  writer.py
src/interfaces/: file_processor.cpp
src/sgf/: main.py
src/sgf/abstracts/: __init__.py  file_handler_abstract.py
src/sgf/app/: __init__.py  exceptions.py  file_handler.py  formatter.py  reader.py  writer.py
tests/: colours.py  exceptions_test.py  file_handler_test.py  formatter_test.py  main_test.py  reader_test.py  writer_test.py
tests/data/: CourseFile.txt  CourseFileInvalid.txt  CourseFileMissing.txt  FormattedData.txt  NameFile.txt  NameFileInvalid.txt  NameFileMissing.txt
tests/unit_tests/: file_processor_test.py
